grab cv, contact info part added to page, layout needs changing

--- a/contact.html
+++ b/contact.html
@@ -41,36 +41,37 @@
 
 <div class="container">
 
-    <form>
-        <div class="form-group row contact-page-style">
-            <div class="col-6">
-                <input type="text" class="form-control" placeholder="First name" required>
-            </div>
-        </div>
-        <div class="form-group row contact-page-style">
-            <div class="col-6">
-                <input type="text" class="form-control" placeholder="Last name" required>
-            </div>
-        </div>
-        <div class="form-group row contact-page-style">
-            <div class="col-6">
-                <input type="email" class="form-control" placeholder="Email" required>
-            </div>
-        </div>
-        <div class="form-group row contact-page-style">
-            <div class="col-6">
-                <input type="phone" class="form-control" placeholder="Phone number" required>
-            </div>
-        </div>
-        <div class="form-group row contact-page-style">
-            <div class="col-6">
-                <textarea class="form-control" placeholder="Project Info" required></textarea>
-            </div>
-            <button class="btn btn-primary" type="submit">Submit for estimation</button>
-        </div>
-    </form>
-</div>
 
+    <div class="row justify-content-start">
+        <div class="col-lg-4 col-md-12 col-sm-12">
+            <form>
+                <div class="contact-page-style">
+                    <input type="text" class="form-control" placeholder="First name" required>
+                </div>
+                <div class="contact-page-style">
+                    <input type="text" class="form-control" placeholder="Last name" required>
+                </div>
+                <div class="contact-page-style">
+
+                    <input type="email" class="form-control" placeholder="Email" required>
+                </div>
+                <div class="contact-page-style">
+                    <input type="phone" class="form-control" placeholder="Phone number" required>
+                </div>
+                <div class="contact-page-style">
+                    <textarea class="form-control" placeholder="Project Info" required></textarea>
+                    <button class="btn btn-primary" type="submit">Submit and let's create magic together</button>
+                </div>
+            </form>
+            <div class="contact-page-style">
+                <p>Contact info goes here</p>
+            </div>
+            <div class="contact-page-style">
+                <p>Grab a CV goes here</p>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
