testing form + contact details + cv different layout options

--- a/contact.html
+++ b/contact.html
@@ -41,9 +41,20 @@
 
 <div class="container">
 
+    <div class="row">
+        <div class="col contact-page-style">
+            <p class="contact-info">Name:</p>
+            <p class="contact-info">Madis Tepp</p>
+            <p class="contact-info">Phone:</p>
+            <p class="contact-info">+46 711 111 111</p>
+            <p class="contact-info">E-mail:</p>
+            <p class="contact-info">madis.tepp@zzz.yyy</p>
+            <p class="contact-info">Address:</p>
+            <p class="contact-info">Sankt Eriksgatan 10001, 16555, Stockholm, Sweden</p>
+            <a href="#">Grab a CV by clicking here</a>
 
-    <div class="row justify-content-start">
-        <div class="col-lg-4 col-md-12 col-sm-12">
+
+        <div class="col">
             <form>
                 <div class="contact-page-style">
                     <input type="text" class="form-control" placeholder="First name" required>
@@ -63,12 +74,7 @@
                     <button class="btn btn-primary" type="submit">Submit and let's create magic together</button>
                 </div>
             </form>
-            <div class="contact-page-style">
-                <p>Contact info goes here</p>
-            </div>
-            <div class="contact-page-style">
-                <p>Grab a CV goes here</p>
-            </div>
+        </div>    
         </div>
     </div>
 </div>
