--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     <a class="navbar-brand" href="#">MT Design</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
-  </button>
+    </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
@@ -40,21 +40,8 @@
 </nav>
 
 <div class="container">
-
-    <div class="row">
-        <div class="col contact-page-style">
-            <p class="contact-info">Name:</p>
-            <p class="contact-info">Madis Tepp</p>
-            <p class="contact-info">Phone:</p>
-            <p class="contact-info">+46 711 111 111</p>
-            <p class="contact-info">E-mail:</p>
-            <p class="contact-info">madis.tepp@zzz.yyy</p>
-            <p class="contact-info">Address:</p>
-            <p class="contact-info">Sankt Eriksgatan 10001, 16555, Stockholm, Sweden</p>
-            <a href="#">Grab a CV by clicking here</a>
-
-
-        <div class="col">
+    <div class="row justify-content-around">
+        <div class="col-lg-4 col-sm-12">
             <form>
                 <div class="contact-page-style">
                     <input type="text" class="form-control" placeholder="First name" required>
@@ -70,13 +57,33 @@
                     <input type="phone" class="form-control" placeholder="Phone number" required>
                 </div>
                 <div class="contact-page-style">
-                    <textarea class="form-control" placeholder="Project Info" required></textarea>
-                    <button class="btn btn-primary" type="submit">Submit and let's create magic together</button>
+                    <textarea class="form-control" placeholder="Describe your idea and let's create magic together" required></textarea>
+                    <button class="btn btn-primary" type="submit">Send</button>
                 </div>
             </form>
-        </div>    
+        </div>
+
+
+        <div class="col-lg-4 col-sm-12 contact-page-style">
+
+                <h6>Name</h6>
+                <p>Madis Tepp</p>
+
+                <h6>Phone</h6>
+                <p>+46 71234567</p>
+
+                <h6>E-mail</h6>
+                <p>Madis.Tepp@Xyz.org</p>
+
+                <h6>Address</h6>
+                <p>123 Park Ave, Stockholm, Sweden, 194967</p>
+
+                <a href="#" target="_blank">Download my CV</a>
+
         </div>
     </div>
+
+
 </div>
 
 
