divs added to contact details to style bc color, font color, hover, btn

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
 
 <div class="container">
     <div class="row justify-content-around">
-        <div class="col-lg-4 col-sm-12">
+        <div class="col-lg-4 col-sm-12 form-style">
             <form>
                 <div class="contact-page-style">
                     <input type="text" class="form-control" placeholder="First name" required>
@@ -64,21 +64,23 @@
         </div>
 
 
-        <div class="col-lg-4 col-sm-12 contact-page-style">
-
-                <h6>Name</h6>
+        <div class="col-lg-4 col-sm-12 contact-page-style contact-details-style">
+                <div class="contact-details">
+                <h6>Name:</h6>
                 <p>Madis Tepp</p>
-
-                <h6>Phone</h6>
+                </div>
+                <div class="contact-details">
+                <h6>Phone:</h6>
                 <p>+46 71234567</p>
-
-                <h6>E-mail</h6>
+                </div>
+                <div class="contact-details">
+                <h6>E-mail:</h6>
                 <p>Madis.Tepp@Xyz.org</p>
-
-                <h6>Address</h6>
-                <p>123 Park Ave, Stockholm, Sweden, 194967</p>
-
-                <a href="#" target="_blank">Download my CV</a>
+                </div>
+                <div class="contact-details">
+                <a href="#" target="_blank" class="download-resume">Download my CV</a>
+                </div>
+            
 
         </div>
     </div>
