--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 <body>        
 
 <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">MT Design</a>
+    <a class="navbar-brand" href="index.html">MT Design</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
@@ -24,16 +24,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="# ">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="# ">About<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="aboutme.html">About</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="# ">Portfolio</a>
+                <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="# ">Contact<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</span></a>
             </li>
         </ul>
     </div>
@@ -78,7 +78,7 @@
                 <p>Madis.Tepp@Xyz.org</p>
                 </div>
                 <div class="contact-details">
-                <a href="#" target="_blank" class="download-resume">Download my CV</a>
+                <a href="assets/images/Madis_Tepp_CV_2019.docx" target="_blank" class="download-resume">Download my CV</a>
                 </div>
             
 
@@ -91,15 +91,15 @@
 
 
 <div class="footer fixed-bottom container-fluid ">
-    <a href="# " title="Visit my Facebook pages "><i class="fab fa-facebook social-links "></i></a>
+    <a href="https://www.facebook.com/madis.tepp" target="_blank" title="Visit my Facebook pages "><i class="fab fa-facebook social-links "></i></a>
     <span class="sr-only ">Facebook</span>
-    <a href="# " title="Visit my Instagram account "><i class="fab fa-instagram social-links "></i></a>
+    <a href="https://www.instagram.com/teppm/" target="_blank" title="Visit my Instagram account "><i class="fab fa-instagram social-links "></i></a>
     <span class="sr-only ">Instagram</span>
-    <a href="# " title="Visit my Linkedin account "><i class="fab fa-linkedin social-links "></i></a>
+    <a href="https://www.linkedin.com/in/madis-tepp-1a0283b1/" target="_blank" title="Visit my Linkedin account "><i class="fab fa-linkedin social-links "></i></a>
     <span class="sr-only ">Linkedin</span>
-    <a href="# " title="Visit my GitHub account "><i class="fab fa-github social-links "></i></a>
+    <a href="https://github.com/teppm " target="_blank" title="Visit my GitHub account "><i class="fab fa-github social-links "></i></a>
     <span class="sr-only ">GitHub</span>
-    <a href="# " title="Download my resume "><i class="fas fa-file-download social-links "></i></a>
+    <a href="assets/images/Madis_Tepp_CV_2019.docx" target="_blank" title="Download my resume "><i class="fas fa-file-download social-links "></i></a>
     <span class="sr-only ">Resume</span>
 </div>
     
