--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 
 <!--navbar end-->
 
-<!--page content, intro text + intor video-->
+<!--page content, intro text + intro video-->
 
 <section>
     <div class="container">
         <div class="row">
-            <div class="col-12 index-text-style jumbotron">
+            <div class="col-12 index-text-style">
                 <h1>Hi I'm Madis Tepp</h1>
                 <p>I am a full stack developer and can help you turn your craziest website ideas to reality</p>
                 <p>Have a look around, get inspired and contact me for co-operation</p>
@@ -56,7 +56,15 @@
     </div>
 </section>
 
-<!--page content, intro text + intor vidoe-->
+<section>
+    <div class="embed-responsive embed-responsive-16by9 container">
+    <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/pXtN4y3O35M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+</section>
+
+
+
+<!--page content, intro text + intro video end-->
 
      
 
