--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <section>
     <div class="embed-responsive embed-responsive-16by9 container">
-    <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/pXtN4y3O35M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/pXtN4y3O35M" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 </section>
 
