contact info list fixed, error received from html validator fixed

--- a/contact.html
+++ b/contact.html
@@ -41,66 +41,57 @@
 </nav>
 
 <!--navbar end-->
+<main>
+    <div class="container">
+        <div class="row justify-content-around">
 
 
-<div class="container">
-    <div class="row justify-content-around">
+            <!--contact form-->
 
 
-        <!--contact form-->
+            <div class="col-lg-4 col-sm-12 form-style">
+                <form>
+                    <div class="contact-page-style">
+                        <input type="text" class="form-control" placeholder="First name" required>
+                    </div>
+                    <div class="contact-page-style">
+                        <input type="text" class="form-control" placeholder="Last name" required>
+                    </div>
+                    <div class="contact-page-style">
+
+                        <input type="email" class="form-control" placeholder="Email" required>
+                    </div>
+                    <div class="contact-page-style">
+                        <input type="tel" class="form-control" placeholder="Phone number" required>
+                    </div>
+                    <div class="contact-page-style">
+                        <textarea class="form-control" placeholder="Describe your idea and let's create magic together" required></textarea>
+                        <button class="btn btn-primary" type="submit">Send</button>
+                    </div>
+                </form>
+            </div>
+
+            <!--contact form end-->
 
 
-        <div class="col-lg-4 col-sm-12 form-style">
-            <form>
-                <div class="contact-page-style">
-                    <input type="text" class="form-control" placeholder="First name" required>
-                </div>
-                <div class="contact-page-style">
-                    <input type="text" class="form-control" placeholder="Last name" required>
-                </div>
-                <div class="contact-page-style">
+            <!--contact details-->
 
-                    <input type="email" class="form-control" placeholder="Email" required>
-                </div>
-                <div class="contact-page-style">
-                    <input type="tel" class="form-control" placeholder="Phone number" required>
-                </div>
-                <div class="contact-page-style">
-                    <textarea class="form-control" placeholder="Describe your idea and let's create magic together" required></textarea>
-                    <button class="btn btn-primary" type="submit">Send</button>
-                </div>
-            </form>
+            <div class="col-lg-4 col-sm-12 contact-page-style contact-details-style">
+                <ul class="contact-list">
+                        <li class="contact-details">Name: <br>Madis Tepp</li>
+                        <li class="contact-details">Phone: <br>+46 723 23 23 23</li>
+                        <li class="contact-details">E-Mail: <br>Madis.Tepp@zzz.org</li>
+                </ul>
+                    <div class="contact-details">
+                        <a  href="assets/images/Madis_Tepp_CV_2019.docx" target="_blank" class="download-resume">Download my CV</a>
+                    </div>
+            </div>
+
+            <!--contact details end-->
+
         </div>
-
-        <!--contact form end-->
-
-
-        <!--contact details-->
-
-        <div class="col-lg-4 col-sm-12 contact-page-style contact-details-style">
-            <div class="contact-details">
-                <h6>Name:</h6>
-                <p>Madis Tepp</p>
-            </div>
-            <div class="contact-details">
-                <h6>Phone:</h6>
-                <p>+46 71234567</p>
-            </div>
-            <div class="contact-details">
-                <h6>E-mail:</h6>
-                <p>Madis.Tepp@Xyz.org</p>
-            </div>
-            <div class="contact-details">
-                <a href="assets/images/Madis_Tepp_CV_2019.docx" target="_blank" class="download-resume">Download my CV</a>
-            </div>
-        </div>
-
-        <!--contact details end-->
-
     </div>
-</div>
-
-
+</main>
 
 <!--footer section starts here-->
 
