--- a/portfolio.html
+++ b/portfolio.html
@@ -24,14 +24,14 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item  active">
-                <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item ">
                 <a class="nav-link" href="aboutme.html">About</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="portfolio.html">Portfolio</a>
+            <li class="nav-item active">
+                <a class="nav-link" href="portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
