--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet " href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Karla:200,200i,400,400i,700,700i,800,800i&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Caveat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     <title>Madis Tepp</title>
 </head>
@@ -16,7 +17,7 @@
 
 <!--navbar-->
 
-<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark">
     <a class="navbar-brand" href="index.html">MT Design</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -47,8 +48,8 @@
 <section>
     <div class="container">
         <div class="row">
-            <div class="col-12 index-text-style">
-                <h1>Hi I'm Madis Tepp</h1>
+            <div class="col index-text-style">
+                <h1 class="index-text">Hi I'm Madis Tepp</h1>
                 <p>I am a full stack developer and can help you turn your craziest website ideas to reality</p>
                 <p>Have a look around, get inspired and contact me for co-operation</p>
             </div>
