--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
 </section>
 
 <section>
+    <row class="justify-content-center">
     <div class="embed-responsive embed-responsive-16by9 container">
-    <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/pXtN4y3O35M" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/pXtN4y3O35M" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
+    </row>
 </section>
 
 
