paragraph added with info to check out video

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
             <div class="col index-text-style">
                 <h1 class="index-text">Hi I'm Madis Tepp</h1>
                 <p>I am a full stack developer and can help you turn your craziest website ideas to reality</p>
-                <p>Have a look around, get inspired and contact me for co-operation</p>
+                <p>Have a look around, get inspired and contact me for co-operation.</p>
+                <p>Check out below how we work!</p>
             </div>
         </div>
     </div>
