--- a/contact.html
+++ b/contact.html
@@ -53,8 +53,8 @@
             <!--contact form-->
 
 
-            <div class="col-lg-4 col-sm-12 form-style">
-                <form>
+            <div class="col-lg-4 col-sm-12">
+                <form class="form-style">
                     <div class="contact-page-style">
                         <input type="text" class="form-control" placeholder="First name" required>
                     </div>
