donwload resume button center and styled

--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
                     <div class="contact-page-style">
                         <input type="tel" class="form-control" placeholder="Phone number" required>
                     </div>
-                    <div class="contact-page-style">
+                    <div class="contact-page-style text-center">
                         <textarea class="form-control" placeholder="Describe your idea and let's create magic together" required></textarea>
                         <button class="btn btn-primary" type="submit">Send</button>
                         
@@ -87,7 +87,7 @@
                         <li class="contact-details">Phone: <br>+46 723 23 23 23</li>
                         <li class="contact-details">E-Mail: <br>Madis.Tepp@zzz.org</li>
                 </ul>
-                    <div class="contact-details">
+                    <div class="my-3 text-center">
                         <a  href="assets/images/Madis_Tepp_CV_2019.docx" target="_blank" class="download-resume">Download my CV</a>
                     </div>
             </div>
