--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <div class="container">
         <div class="row">
             <div class="col index-text-style">
+                <img src="assets/images/LogoMakr_99dxlu.png"></img>
                 <h1 class="index-text">Hi I'm Madis Tepp</h1>
                 <p>I am a full stack developer and can help you turn your craziest website ideas to reality</p>
                 <p>Have a look around, get inspired and contact me for co-operation.</p>
