--- a/aboutme.html
+++ b/aboutme.html
@@ -27,7 +27,7 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav mx-auto">
             <li class="nav-item">
                 <a class="nav-link" href="index.html">Home</a>
             </li>
